--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -273,6 +273,19 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+  
+  .animate-scroll {
+    animation: scroll 40s linear infinite;
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-250px * 7));
+    }
+  }
 }
 
 .material-symbols-outlined {
